# gear

./: .gitignore  CMakeLists.txt  README.md
include/: bedWriter.h  csvParser.h  genomeRegion.h  kseq.h  logger.h  motif.h  motifCount.h  options.h  sequenceReader.h  utils.h
src/: bedWriter.cpp  main.cpp  sequenceReader.cpp  utils.cpp
src/Modules/GenomeAnalysis/: genomeAnalysis.cpp  genomeAnalysis.h  sequenceNetwork.cpp  telomereRegion.cpp  telomereRegion.h
src/Modules/IwgsAnalysis/: iwgsAnalysis.cpp  iwgsAnalysis.h  sequenceClassification.cpp  sequenceClassification.h
src/Modules/MotifCount/: motifCount.cpp  motifCount.h  motifRegion.cpp  motifRegion.h
src/Modules/TelomereAnalysis/: kmerNode.cpp  kmerNode.h  sequenceNetwork.cpp  sequenceNetwork.h  telomereAnalysis.cpp  telomereAnalysis.h
src/Modules/TelomereMutations/: telomereMutations.cpp  telomereMutations.h
src/Modules/VariantCallAnalysis/: variantCallAnalysis.cpp  variantCallAnalysis.h  variantCallRecord.cpp  variantCallRecord.h  variantRegion.cpp  variantRegion.h
test/: CMakeLists.txt
test/data/input/: idxstats.tsv  input.bam  input.bam.bai  input.csv  input.fq  input_m2.bam  input_m2.bam.bai
test/data/output/: bam_result.json  result.json
test/data/par/: input.json  input.par  motifs.json  motifs_hg38.json  motifs_telomere.json  ref.fa  ref.fa.fai  ref.fa.index  regions.csv  transition_matrix.csv  vc_regions.json
test/src/: testGenomeRegion.cpp  testKmerNode.cpp  testMotifCount.cpp  testMotifRegion.cpp  testSequenceNetwork.cpp  testSequenceReader.cpp  testUtils.cpp  testVariantRegion.cpp
